2018-10-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Makefile.PL.in: Use MAGICK_API_LIBS to obtain the
	list of libraries to use when linking.

	* configure.ac: OpenMP library is normally supplied due to a
	CFLAGS option so only supply it in cases where the CFLAGS option
	may be lost or it might not be used.  Otherwise the compiler may
	apply the library twice when linking.

2018-10-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Remove Ghostscript library support (--with-gslib)
	from configure script.  The 'HasGS' pre-processor defines which
	were enabled by this remain in the source code so it is still
	possible to use this library if absolutely necessary
	(e.g. CPPFLAGS=-DHasGS LIBS=-lgs).

	* tests/rwfile.tap: Test TIFF format with all supported
	compression options.

	* tests/{rwblob.c, rwfile.c} (main): Use StringToCompressionType()
	to parse compression option. Also consider requested compression
	algorithm when deciding if format is lossy.

	* coders/tiff.c (WriteTIFFImage): WebP compression needs
	PHOTOMETRIC_RGB. Fix wrong rows-per-strip calculation when using
	LZMA compression.

	* tests/rwblob.tap: Added a rwblob test to verify that lower-case
	magick works.

	* magick/static.c (OpenModule): Upper case magick string before
	searching static modules list.  Fixes Debian bug 911386
	"libgraphicsmagick-q16-3: graphicsmagick 1.3.30 has made formats
	case-sensitive at the API level".

	* filters/analyze.c (AnalyzeImage): X and y should be unsigned
	long to match image rows/columns type.  Calculate total pixels by
	simple multiplication rather than counting.

2018-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Support WebP compression in
	TIFF. This requires a libtiff release after 4.0.9.

	* magick/image.h ("C"): WebPCompression added to CompressionType
	enumeration.

2018-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
