@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020181021"
-#define public MagickPackageReleaseDate "snapshot-20181021"
+#define public MagickPackageVersionAddendum ".020181023"
+#define public MagickPackageReleaseDate "snapshot-20181023"
