@@ -61,24 +61,6 @@
 #endif
 
 /*
-  Compute a value which is the next kilobyte power of 2 larger than
-  the requested value or MaxTextExtent, whichever is larger.
-
-  The objective is to round up the size quickly (and in repeatable
-  steps) in order to reduce the number of memory copies due to realloc
-  for strings which grow rapidly, while producing a reasonable size
-  for smaller strings.
-*/
-#define MagickRoundUpStringLength(size) \
-{ \
-  size_t \
-    _rounded; \
- \
-  for (_rounded=256U; _rounded < (Max(size,256)); _rounded *= 2); \
-  size=_rounded; \
-}
-
-/*
   Static declarations.
 */
 static const char
