@@ -1,3 +1,10 @@
+2018-10-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/gif.c (ReadGIFImage): Improve the efficiency of storing a
+	GIF comment in order to avoid a DOS opportunity.  Fixes oss-fuzz
+	11096 "graphicsmagick/coder_GIF_fuzzer: Timeout in
+	graphicsmagick_coder_GIF_fuzzer". (Credit to OSS-Fuzz)
+
 2018-10-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* PerlMagick/Makefile.PL.in: Use MAGICK_API_LIBS to obtain the
